// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`golden: female casual gap suggestions are stable 1`] = `
{
  "asBottoms": [
    {
      "c": "Olive",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Brown",
      "fl": true,
      "n": 6,
    },
    {
      "c": "White",
      "fl": false,
      "n": 7,
    },
    {
      "c": "Cream",
      "fl": false,
      "n": 7,
    },
    {
      "c": "Blue",
      "fl": true,
      "n": 4,
    },
  ],
  "asTops": [
    {
      "c": "Khaki",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Blue",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Rust",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Brown",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Forest Green",
      "fl": true,
      "n": 5,
    },
    {
      "c": "Beige",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Grey",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Purple",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Charcoal",
      "fl": false,
      "n": 5,
    },
    {
      "c": "Black",
      "fl": false,
      "n": 4,
    },
  ],
}
`;

exports[`golden: female casual ranked deck for Bold matches the snapshot 1`] = `
[
  "Mustard|Charcoal@1.5082",
  "Burgundy|Khaki@1.147",
  "Mustard|Navy@1.15",
  "Burgundy|Beige@1.144",
  "Mustard|Black@1.1452",
  "Burgundy|Grey@1.1082",
  "Olive|Black@0.9652",
  "Mustard|Khaki@0.957",
  "Olive|Navy@0.96",
  "Mustard|Grey@0.9182",
  "Olive|Khaki@0.957",
  "Burgundy|Black@0.9152",
  "Olive|Grey@0.9182",
  "Mustard|Beige@0.914",
  "Olive|Charcoal@0.9182",
  "Burgundy|Charcoal@0.7182",
]
`;

exports[`golden: female casual ranked deck for Classic matches the snapshot 1`] = `
[
  "White|Black@1.4952",
  "Burgundy|Navy@1.04",
  "Light Blue|Charcoal@0.9982",
  "Light Blue|Black@0.9452",
  "Light Blue|Grey@0.8182",
  "Light Blue|Khaki@0.807",
]
`;

exports[`golden: female casual ranked deck for Minimal matches the snapshot 1`] = `
[
  "White|Navy@1.57",
  "Cream|Beige@1.264",
  "Light Blue|Navy@1.34",
  "Navy|Khaki@1.217",
  "Olive|Beige@1.194",
  "Navy|Navy@1.28",
  "Light Blue|Beige@1.154",
  "Navy|Grey@1.1782",
  "Cream|Navy@1.17",
  "Navy|Beige@1.214",
  "White|Charcoal@1.1282",
  "Cream|Black@1.1252",
  "White|Grey@1.0882",
  "Cream|Charcoal@1.1282",
  "White|Khaki@0.987",
  "Cream|Grey@1.0882",
  "White|Beige@0.984",
  "Cream|Khaki@0.987",
  "Navy|Charcoal@0.8782",
]
`;

exports[`golden: female casual ranked deck for Statement matches the snapshot 1`] = `[]`;

exports[`golden: female casual universe (ids + scores) matches the snapshot 1`] = `
[
  {
    "curated": true,
    "id": "White|Navy",
    "sc": 1.44,
  },
  {
    "curated": true,
    "id": "White|Black",
    "sc": 1.3952,
  },
  {
    "curated": true,
    "id": "Light Blue|Navy",
    "sc": 1.34,
  },
  {
    "curated": true,
    "id": "Mustard|Charcoal",
    "sc": 1.3182,
  },
  {
    "curated": true,
    "id": "Olive|Beige",
    "sc": 1.314,
  },
  {
    "curated": true,
    "id": "Light Blue|Beige",
    "sc": 1.114,
  },
  {
    "curated": false,
    "id": "Navy|Navy",
    "sc": 1.11,
  },
  {
    "curated": true,
    "id": "Cream|Beige",
    "sc": 1.094,
  },
  {
    "curated": false,
    "id": "Navy|Khaki",
    "sc": 1.087,
  },
  {
    "curated": false,
    "id": "Navy|Beige",
    "sc": 1.084,
  },
  {
    "curated": false,
    "id": "Navy|Grey",
    "sc": 1.0482,
  },
  {
    "curated": false,
    "id": "Cream|Navy",
    "sc": 1.04,
  },
  {
    "curated": true,
    "id": "Burgundy|Navy",
    "sc": 1.02,
  },
  {
    "curated": false,
    "id": "White|Charcoal",
    "sc": 0.9982,
  },
  {
    "curated": false,
    "id": "Cream|Charcoal",
    "sc": 0.9982,
  },
  {
    "curated": false,
    "id": "Cream|Black",
    "sc": 0.9952,
  },
  {
    "curated": false,
    "id": "Mustard|Navy",
    "sc": 0.96,
  },
  {
    "curated": false,
    "id": "White|Grey",
    "sc": 0.9582,
  },
  {
    "curated": false,
    "id": "Cream|Grey",
    "sc": 0.9582,
  },
  {
    "curated": false,
    "id": "Burgundy|Khaki",
    "sc": 0.957,
  },
  {
    "curated": false,
    "id": "Mustard|Black",
    "sc": 0.9552,
  },
  {
    "curated": false,
    "id": "Burgundy|Beige",
    "sc": 0.954,
  },
  {
    "curated": false,
    "id": "Burgundy|Grey",
    "sc": 0.9182,
  },
  {
    "curated": false,
    "id": "Light Blue|Charcoal",
    "sc": 0.8982,
  },
  {
    "curated": false,
    "id": "Light Blue|Black",
    "sc": 0.8952,
  },
  {
    "curated": false,
    "id": "White|Khaki",
    "sc": 0.857,
  },
  {
    "curated": false,
    "id": "Cream|Khaki",
    "sc": 0.857,
  },
  {
    "curated": false,
    "id": "Olive|Navy",
    "sc": 0.82,
  },
  {
    "curated": false,
    "id": "Olive|Khaki",
    "sc": 0.817,
  },
  {
    "curated": false,
    "id": "Mustard|Khaki",
    "sc": 0.817,
  },
  {
    "curated": false,
    "id": "White|Beige",
    "sc": 0.814,
  },
  {
    "curated": false,
    "id": "Olive|Grey",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Olive|Charcoal",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Mustard|Grey",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Olive|Black",
    "sc": 0.7752,
  },
  {
    "curated": false,
    "id": "Burgundy|Black",
    "sc": 0.7752,
  },
  {
    "curated": false,
    "id": "Mustard|Beige",
    "sc": 0.774,
  },
  {
    "curated": false,
    "id": "Light Blue|Khaki",
    "sc": 0.757,
  },
  {
    "curated": false,
    "id": "Light Blue|Grey",
    "sc": 0.7182,
  },
  {
    "curated": false,
    "id": "Navy|Charcoal",
    "sc": 0.7082,
  },
  {
    "curated": false,
    "id": "Burgundy|Charcoal",
    "sc": 0.5782,
  },
]
`;

exports[`golden: female formal gap suggestions are stable 1`] = `
{
  "asBottoms": [
    {
      "c": "Olive",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Brown",
      "fl": true,
      "n": 6,
    },
    {
      "c": "White",
      "fl": false,
      "n": 7,
    },
    {
      "c": "Cream",
      "fl": false,
      "n": 7,
    },
  ],
  "asTops": [
    {
      "c": "Khaki",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Blue",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Rust",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Brown",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Forest Green",
      "fl": true,
      "n": 5,
    },
    {
      "c": "Beige",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Grey",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Purple",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Charcoal",
      "fl": false,
      "n": 5,
    },
    {
      "c": "Black",
      "fl": false,
      "n": 4,
    },
  ],
}
`;

exports[`golden: female formal ranked deck for Bold matches the snapshot 1`] = `
[
  "Mustard|Navy@1.15",
  "Burgundy|Khaki@1.147",
  "Mustard|Black@1.1452",
  "Burgundy|Beige@1.144",
  "Mustard|Charcoal@1.1082",
  "Burgundy|Grey@1.1082",
  "Olive|Beige@1.104",
  "Mustard|Khaki@0.957",
  "Olive|Black@0.9652",
  "Mustard|Grey@0.9182",
  "Olive|Navy@0.96",
  "Burgundy|Black@0.9152",
  "Olive|Khaki@0.957",
  "Mustard|Beige@0.914",
  "Olive|Grey@0.9182",
  "Burgundy|Charcoal@0.7182",
  "Olive|Charcoal@0.9182",
]
`;

exports[`golden: female formal ranked deck for Classic matches the snapshot 1`] = `
[
  "White|Navy@1.59",
  "Light Blue|Charcoal@0.9982",
  "White|Black@1.4952",
  "Light Blue|Navy@1.49",
  "White|Charcoal@1.5482",
  "Burgundy|Navy@1.04",
  "Light Blue|Black@0.9452",
  "Light Blue|Grey@0.8182",
  "Light Blue|Beige@0.814",
  "Light Blue|Khaki@0.807",
]
`;

exports[`golden: female formal ranked deck for Minimal matches the snapshot 1`] = `
[
  "Navy|Navy@1.28",
  "Cream|Beige@1.264",
  "Navy|Khaki@1.217",
  "Cream|Navy@1.17",
  "Navy|Beige@1.214",
  "Cream|Charcoal@1.1282",
  "Navy|Grey@1.1782",
  "Cream|Black@1.1252",
  "White|Grey@1.0882",
  "Cream|Khaki@0.987",
  "White|Beige@0.984",
  "Cream|Grey@1.0882",
  "White|Khaki@0.987",
  "Navy|Charcoal@0.8782",
]
`;

exports[`golden: female formal ranked deck for Statement matches the snapshot 1`] = `[]`;

exports[`golden: female formal universe (ids + scores) matches the snapshot 1`] = `
[
  {
    "curated": true,
    "id": "White|Navy",
    "sc": 1.44,
  },
  {
    "curated": true,
    "id": "White|Charcoal",
    "sc": 1.3982,
  },
  {
    "curated": true,
    "id": "White|Black",
    "sc": 1.3952,
  },
  {
    "curated": true,
    "id": "Light Blue|Navy",
    "sc": 1.34,
  },
  {
    "curated": false,
    "id": "Navy|Navy",
    "sc": 1.11,
  },
  {
    "curated": true,
    "id": "Cream|Beige",
    "sc": 1.094,
  },
  {
    "curated": false,
    "id": "Navy|Khaki",
    "sc": 1.087,
  },
  {
    "curated": false,
    "id": "Navy|Beige",
    "sc": 1.084,
  },
  {
    "curated": false,
    "id": "Navy|Grey",
    "sc": 1.0482,
  },
  {
    "curated": false,
    "id": "Cream|Navy",
    "sc": 1.04,
  },
  {
    "curated": true,
    "id": "Burgundy|Navy",
    "sc": 1.02,
  },
  {
    "curated": false,
    "id": "Cream|Charcoal",
    "sc": 0.9982,
  },
  {
    "curated": false,
    "id": "Cream|Black",
    "sc": 0.9952,
  },
  {
    "curated": false,
    "id": "Mustard|Navy",
    "sc": 0.96,
  },
  {
    "curated": false,
    "id": "White|Grey",
    "sc": 0.9582,
  },
  {
    "curated": false,
    "id": "Cream|Grey",
    "sc": 0.9582,
  },
  {
    "curated": false,
    "id": "Burgundy|Khaki",
    "sc": 0.957,
  },
  {
    "curated": false,
    "id": "Mustard|Black",
    "sc": 0.9552,
  },
  {
    "curated": false,
    "id": "Burgundy|Beige",
    "sc": 0.954,
  },
  {
    "curated": false,
    "id": "Burgundy|Grey",
    "sc": 0.9182,
  },
  {
    "curated": false,
    "id": "Mustard|Charcoal",
    "sc": 0.9182,
  },
  {
    "curated": false,
    "id": "Olive|Beige",
    "sc": 0.914,
  },
  {
    "curated": false,
    "id": "Light Blue|Charcoal",
    "sc": 0.8982,
  },
  {
    "curated": false,
    "id": "Light Blue|Black",
    "sc": 0.8952,
  },
  {
    "curated": false,
    "id": "White|Khaki",
    "sc": 0.857,
  },
  {
    "curated": false,
    "id": "Cream|Khaki",
    "sc": 0.857,
  },
  {
    "curated": false,
    "id": "Olive|Navy",
    "sc": 0.82,
  },
  {
    "curated": false,
    "id": "Olive|Khaki",
    "sc": 0.817,
  },
  {
    "curated": false,
    "id": "Mustard|Khaki",
    "sc": 0.817,
  },
  {
    "curated": false,
    "id": "White|Beige",
    "sc": 0.814,
  },
  {
    "curated": false,
    "id": "Olive|Grey",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Olive|Charcoal",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Mustard|Grey",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Olive|Black",
    "sc": 0.7752,
  },
  {
    "curated": false,
    "id": "Burgundy|Black",
    "sc": 0.7752,
  },
  {
    "curated": false,
    "id": "Mustard|Beige",
    "sc": 0.774,
  },
  {
    "curated": false,
    "id": "Light Blue|Khaki",
    "sc": 0.757,
  },
  {
    "curated": false,
    "id": "Light Blue|Grey",
    "sc": 0.7182,
  },
  {
    "curated": false,
    "id": "Light Blue|Beige",
    "sc": 0.714,
  },
  {
    "curated": false,
    "id": "Navy|Charcoal",
    "sc": 0.7082,
  },
  {
    "curated": false,
    "id": "Burgundy|Charcoal",
    "sc": 0.5782,
  },
]
`;

exports[`golden: male casual gap suggestions are stable 1`] = `
{
  "asBottoms": [
    {
      "c": "Olive",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Brown",
      "fl": true,
      "n": 6,
    },
    {
      "c": "White",
      "fl": false,
      "n": 7,
    },
    {
      "c": "Cream",
      "fl": false,
      "n": 7,
    },
    {
      "c": "Blue",
      "fl": true,
      "n": 4,
    },
  ],
  "asTops": [
    {
      "c": "Khaki",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Blue",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Rust",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Brown",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Forest Green",
      "fl": true,
      "n": 5,
    },
    {
      "c": "Beige",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Grey",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Purple",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Charcoal",
      "fl": false,
      "n": 5,
    },
    {
      "c": "Black",
      "fl": false,
      "n": 4,
    },
  ],
}
`;

exports[`golden: male casual ranked deck for Bold matches the snapshot 1`] = `
[
  "Mustard|Navy@1.55",
  "Burgundy|Beige@1.544",
  "Mustard|Black@1.1452",
  "Burgundy|Khaki@1.147",
  "Mustard|Charcoal@1.1082",
  "Burgundy|Grey@1.1082",
  "Olive|Black@0.9652",
  "Mustard|Khaki@0.957",
  "Olive|Navy@0.96",
  "Mustard|Grey@0.9182",
  "Olive|Khaki@0.957",
  "Burgundy|Black@0.9152",
  "Olive|Grey@0.9182",
  "Mustard|Beige@0.914",
  "Olive|Charcoal@0.9182",
  "Burgundy|Navy@0.76",
  "Burgundy|Charcoal@0.7182",
]
`;

exports[`golden: male casual ranked deck for Classic matches the snapshot 1`] = `
[
  "Navy|Grey@1.5982",
  "Light Blue|Khaki@1.207",
  "Light Blue|Navy@1.09",
  "Light Blue|Black@0.9452",
  "Light Blue|Grey@0.8182",
  "Light Blue|Beige@0.814",
]
`;

exports[`golden: male casual ranked deck for Minimal matches the snapshot 1`] = `
[
  "White|Navy@1.57",
  "Light Blue|Charcoal@1.2982",
  "Navy|Navy@1.28",
  "Olive|Beige@1.194",
  "Navy|Khaki@1.217",
  "Cream|Navy@1.17",
  "Navy|Beige@1.214",
  "White|Charcoal@1.1282",
  "Cream|Black@1.1252",
  "White|Grey@1.0882",
  "Cream|Charcoal@1.1282",
  "White|Black@1.1252",
  "Cream|Grey@1.0882",
  "White|Khaki@0.987",
  "Navy|Charcoal@0.8782",
  "Cream|Khaki@0.987",
  "White|Beige@0.984",
  "Cream|Beige@0.864",
]
`;

exports[`golden: male casual ranked deck for Statement matches the snapshot 1`] = `[]`;

exports[`golden: male casual universe (ids + scores) matches the snapshot 1`] = `
[
  {
    "curated": true,
    "id": "Navy|Grey",
    "sc": 1.4482,
  },
  {
    "curated": true,
    "id": "White|Navy",
    "sc": 1.44,
  },
  {
    "curated": true,
    "id": "Mustard|Navy",
    "sc": 1.36,
  },
  {
    "curated": true,
    "id": "Burgundy|Beige",
    "sc": 1.354,
  },
  {
    "curated": true,
    "id": "Olive|Beige",
    "sc": 1.314,
  },
  {
    "curated": true,
    "id": "Light Blue|Charcoal",
    "sc": 1.2982,
  },
  {
    "curated": true,
    "id": "Light Blue|Khaki",
    "sc": 1.157,
  },
  {
    "curated": false,
    "id": "Navy|Navy",
    "sc": 1.11,
  },
  {
    "curated": false,
    "id": "Navy|Khaki",
    "sc": 1.087,
  },
  {
    "curated": false,
    "id": "Navy|Beige",
    "sc": 1.084,
  },
  {
    "curated": false,
    "id": "Cream|Navy",
    "sc": 1.04,
  },
  {
    "curated": false,
    "id": "White|Charcoal",
    "sc": 0.9982,
  },
  {
    "curated": false,
    "id": "Cream|Charcoal",
    "sc": 0.9982,
  },
  {
    "curated": false,
    "id": "White|Black",
    "sc": 0.9952,
  },
  {
    "curated": false,
    "id": "Cream|Black",
    "sc": 0.9952,
  },
  {
    "curated": false,
    "id": "White|Grey",
    "sc": 0.9582,
  },
  {
    "curated": false,
    "id": "Cream|Grey",
    "sc": 0.9582,
  },
  {
    "curated": false,
    "id": "Burgundy|Khaki",
    "sc": 0.957,
  },
  {
    "curated": false,
    "id": "Mustard|Black",
    "sc": 0.9552,
  },
  {
    "curated": false,
    "id": "Light Blue|Navy",
    "sc": 0.94,
  },
  {
    "curated": false,
    "id": "Burgundy|Grey",
    "sc": 0.9182,
  },
  {
    "curated": false,
    "id": "Mustard|Charcoal",
    "sc": 0.9182,
  },
  {
    "curated": false,
    "id": "Light Blue|Black",
    "sc": 0.8952,
  },
  {
    "curated": false,
    "id": "White|Khaki",
    "sc": 0.857,
  },
  {
    "curated": false,
    "id": "Cream|Khaki",
    "sc": 0.857,
  },
  {
    "curated": false,
    "id": "Olive|Navy",
    "sc": 0.82,
  },
  {
    "curated": false,
    "id": "Olive|Khaki",
    "sc": 0.817,
  },
  {
    "curated": false,
    "id": "Mustard|Khaki",
    "sc": 0.817,
  },
  {
    "curated": false,
    "id": "White|Beige",
    "sc": 0.814,
  },
  {
    "curated": false,
    "id": "Olive|Grey",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Olive|Charcoal",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Mustard|Grey",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Olive|Black",
    "sc": 0.7752,
  },
  {
    "curated": false,
    "id": "Burgundy|Black",
    "sc": 0.7752,
  },
  {
    "curated": false,
    "id": "Mustard|Beige",
    "sc": 0.774,
  },
  {
    "curated": false,
    "id": "Light Blue|Grey",
    "sc": 0.7182,
  },
  {
    "curated": false,
    "id": "Light Blue|Beige",
    "sc": 0.714,
  },
  {
    "curated": false,
    "id": "Navy|Charcoal",
    "sc": 0.7082,
  },
  {
    "curated": false,
    "id": "Cream|Beige",
    "sc": 0.694,
  },
  {
    "curated": false,
    "id": "Burgundy|Navy",
    "sc": 0.62,
  },
  {
    "curated": false,
    "id": "Burgundy|Charcoal",
    "sc": 0.5782,
  },
]
`;

exports[`golden: male formal gap suggestions are stable 1`] = `
{
  "asBottoms": [
    {
      "c": "Olive",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Brown",
      "fl": true,
      "n": 6,
    },
    {
      "c": "White",
      "fl": false,
      "n": 7,
    },
    {
      "c": "Cream",
      "fl": false,
      "n": 7,
    },
  ],
  "asTops": [
    {
      "c": "Khaki",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Blue",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Rust",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Brown",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Forest Green",
      "fl": true,
      "n": 5,
    },
    {
      "c": "Beige",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Grey",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Purple",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Charcoal",
      "fl": false,
      "n": 5,
    },
    {
      "c": "Black",
      "fl": false,
      "n": 4,
    },
  ],
}
`;

exports[`golden: male formal ranked deck for Bold matches the snapshot 1`] = `
[
  "Mustard|Navy@1.15",
  "Burgundy|Khaki@1.147",
  "Mustard|Black@1.1452",
  "Burgundy|Beige@1.144",
  "Mustard|Charcoal@1.1082",
  "Burgundy|Grey@1.1082",
  "Olive|Beige@1.104",
  "Mustard|Khaki@0.957",
  "Olive|Black@0.9652",
  "Mustard|Grey@0.9182",
  "Olive|Navy@0.96",
  "Burgundy|Black@0.9152",
  "Olive|Khaki@0.957",
  "Mustard|Beige@0.914",
  "Olive|Grey@0.9182",
  "Burgundy|Navy@0.76",
  "Olive|Charcoal@0.9182",
  "Burgundy|Charcoal@0.7182",
]
`;

exports[`golden: male formal ranked deck for Classic matches the snapshot 1`] = `
[
  "White|Navy@1.59",
  "Light Blue|Grey@1.2182",
  "White|Charcoal@1.5482",
  "Light Blue|Navy@1.49",
  "White|Black@1.4952",
  "Cream|Beige@1.194",
  "Light Blue|Charcoal@0.9982",
  "Light Blue|Black@0.9452",
  "Light Blue|Beige@0.814",
  "Light Blue|Khaki@0.807",
]
`;

exports[`golden: male formal ranked deck for Minimal matches the snapshot 1`] = `
[
  "Navy|Navy@1.28",
  "Cream|Charcoal@1.1282",
  "Navy|Khaki@1.217",
  "Cream|Navy@1.17",
  "Navy|Beige@1.214",
  "Cream|Black@1.1252",
  "Navy|Grey@1.1782",
  "White|Khaki@0.987",
  "Cream|Grey@1.0882",
  "White|Beige@0.984",
  "Cream|Khaki@0.987",
  "White|Grey@1.0882",
  "Navy|Charcoal@0.8782",
]
`;

exports[`golden: male formal ranked deck for Statement matches the snapshot 1`] = `[]`;

exports[`golden: male formal universe (ids + scores) matches the snapshot 1`] = `
[
  {
    "curated": true,
    "id": "White|Navy",
    "sc": 1.44,
  },
  {
    "curated": true,
    "id": "White|Charcoal",
    "sc": 1.3982,
  },
  {
    "curated": true,
    "id": "White|Black",
    "sc": 1.3952,
  },
  {
    "curated": true,
    "id": "Light Blue|Navy",
    "sc": 1.34,
  },
  {
    "curated": true,
    "id": "Light Blue|Grey",
    "sc": 1.1182,
  },
  {
    "curated": false,
    "id": "Navy|Navy",
    "sc": 1.11,
  },
  {
    "curated": true,
    "id": "Cream|Beige",
    "sc": 1.094,
  },
  {
    "curated": false,
    "id": "Navy|Khaki",
    "sc": 1.087,
  },
  {
    "curated": false,
    "id": "Navy|Beige",
    "sc": 1.084,
  },
  {
    "curated": false,
    "id": "Navy|Grey",
    "sc": 1.0482,
  },
  {
    "curated": false,
    "id": "Cream|Navy",
    "sc": 1.04,
  },
  {
    "curated": false,
    "id": "Cream|Charcoal",
    "sc": 0.9982,
  },
  {
    "curated": false,
    "id": "Cream|Black",
    "sc": 0.9952,
  },
  {
    "curated": false,
    "id": "Mustard|Navy",
    "sc": 0.96,
  },
  {
    "curated": false,
    "id": "White|Grey",
    "sc": 0.9582,
  },
  {
    "curated": false,
    "id": "Cream|Grey",
    "sc": 0.9582,
  },
  {
    "curated": false,
    "id": "Burgundy|Khaki",
    "sc": 0.957,
  },
  {
    "curated": false,
    "id": "Mustard|Black",
    "sc": 0.9552,
  },
  {
    "curated": false,
    "id": "Burgundy|Beige",
    "sc": 0.954,
  },
  {
    "curated": false,
    "id": "Burgundy|Grey",
    "sc": 0.9182,
  },
  {
    "curated": false,
    "id": "Mustard|Charcoal",
    "sc": 0.9182,
  },
  {
    "curated": false,
    "id": "Olive|Beige",
    "sc": 0.914,
  },
  {
    "curated": false,
    "id": "Light Blue|Charcoal",
    "sc": 0.8982,
  },
  {
    "curated": false,
    "id": "Light Blue|Black",
    "sc": 0.8952,
  },
  {
    "curated": false,
    "id": "White|Khaki",
    "sc": 0.857,
  },
  {
    "curated": false,
    "id": "Cream|Khaki",
    "sc": 0.857,
  },
  {
    "curated": false,
    "id": "Olive|Navy",
    "sc": 0.82,
  },
  {
    "curated": false,
    "id": "Olive|Khaki",
    "sc": 0.817,
  },
  {
    "curated": false,
    "id": "Mustard|Khaki",
    "sc": 0.817,
  },
  {
    "curated": false,
    "id": "White|Beige",
    "sc": 0.814,
  },
  {
    "curated": false,
    "id": "Olive|Grey",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Olive|Charcoal",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Mustard|Grey",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Olive|Black",
    "sc": 0.7752,
  },
  {
    "curated": false,
    "id": "Burgundy|Black",
    "sc": 0.7752,
  },
  {
    "curated": false,
    "id": "Mustard|Beige",
    "sc": 0.774,
  },
  {
    "curated": false,
    "id": "Light Blue|Khaki",
    "sc": 0.757,
  },
  {
    "curated": false,
    "id": "Light Blue|Beige",
    "sc": 0.714,
  },
  {
    "curated": false,
    "id": "Navy|Charcoal",
    "sc": 0.7082,
  },
  {
    "curated": false,
    "id": "Burgundy|Navy",
    "sc": 0.62,
  },
  {
    "curated": false,
    "id": "Burgundy|Charcoal",
    "sc": 0.5782,
  },
]
`;
